<resources>
    <string name="app_name">finalproject</string>
    <string name="welcome_to_hotel_application">Welcome to Hotel application</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">username :</string>
    <string name="first_name">first name :</string>
    <string name="last_name">last name :</string>
    <string name="password">password :</string>
    <string name="phone_number">phone number :</string>
    <string name="email">email :</string>
    <string name="user_name">User name :</string>
    <string name="welcome_to_sign_up_page">Welcome to sign up page !!</string>
    <string name="done">done</string>
    <string name="welcome_to_login_page">Welcome to login page</string>
    <string name="you_can_choose_you_want">You can choose you want !</string>
    <string name="go_to_your_choose">go to your choose</string>
    <string name="admin_Page">welcometo admin Page</string>
    <string name="add_room">Add Room</string>
    <string name="update_delete_room">Update/Delete Room</string>
    <string name="room_number">Room Number</string>
    <string name="Price">price</string>
    <string name="price">price</string>
    <string name="category">Category</string>
    <string name="Capacity">capacaty</string>
    <string name="Add">addroom</string>
    <string name="welcome_to_add_room_page">rooom</string>
    <string name="enter_the_room_number">enter the room number</string>
    <string name="get_weather">get weather</string>
    <string name="view_user">view user</string>
    <string name="enterusername">enter the user name</string>
    <string name="if_you_want_show_all_user_click_on_button">if you want show all user click on button</string>
    <string name="search">Search</string>
    <string name="show_all_user">show all user</string>
    <string name="to_show_all_room_click_here">to show all room click here ..</string>
    <string name="show_room">show room</string>
    <string name="show_all_rooms">show all rooms</string>
    <string name="enter_room_number_to_detete_it">Enter Room Number to Detete it</string>
    <string name="user_name2">username</string>
    <string name="register">register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_the_name_of_meal_you_want">enter the name of meal you want ..</string>
    <string name="show_price">show price</string>
    <string name="ok">ok</string>
    <string name="the_price_is">the price is :</string>
    <string name="go_to_main_page">go to main page</string>
    <string name="update">update</string>
    <string name="previous_page">previous page</string>
    <string name="status">status</string>
    <string name="number_of_day">Number of Day</string>
    <string name="the_total_price_is">the total price is :</string>
    <string name="enter_the_name">enter the name :</string>
    <string name="welcome_to_update_information_page">Welcome To Update information Page</string>
    <string name="create_admin_or_user_account">create admin or user account</string>
    <string name="weather">weather</string>
    <string name="show">show</string>
    <string name="reserve">reserve</string>
    <string name="User_name">User name</string>
    <string name="enter_the_user_name">Enter the user name</string>
    <string name="log_out">log out</string>
    <string name="log_outt">Log out</string>

</resources>