<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_5"
    tools:context=".reservations"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome To  Reservation room Page"
        style="@style/textveiw"
        />
    <TableLayout
        android:layout_marginTop="40pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                style="@style/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name2"
                />

            <TextView
                android:id="@+id/username"
                style="@style/reg"
                android:textSize="21dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

        </TableRow>

        <TableRow>

            <TextView
                style="@style/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_number"

                />

            <EditText
                android:id="@+id/roomnumber"
                style="@style/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="room number"

                />

        </TableRow>
        <TableRow>

            <TextView
                style="@style/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_day"

                />

            <EditText
                android:id="@+id/day"
                style="@style/reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="room number"

                />

        </TableRow>
    </TableLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn"
        android:layout_marginBottom="20dp"
        android:text="@string/price"
        android:onClick="showprice"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/reg"
    android:text="@string/the_total_price_is"
    android:layout_marginTop="20dp"
    />
    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        style="@style/textveiw"
        android:id="@+id/totalprice"
        />



    <Button
        style="@style/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnreservation"
        android:text="Reserve"
        android:textSize="25dp"
        android:layout_marginBottom="90dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previos"
        android:onClick="btnprevious"
        android:text="@string/previous_page"
        style="@style/btn"
       />


</LinearLayout>
