<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_5"
    tools:context=".confEat">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textveiw"
        android:text="@string/enter_the_name_of_meal_you_want"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    style="@style/textveiw"
    android:id="@+id/edteat"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_price"
        style="@style/btn"
        android:onClick="getpriceandshow"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textveiw"
        android:layout_marginTop="20dp"
        android:id="@+id/show_price"
        android:hint="@string/the_price_is"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textveiw"
        android:text="if you need this meal click ok"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
       />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn"
        android:text="@string/ok"
        android:onClick="okmess"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textveiw"
        android:layout_marginTop="15dp"
        android:id="@+id/okmessage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/btn"
        android:text="@string/go_to_main_page"
        android:onClick="go_to_eat_page"/>



</androidx.appcompat.widget.LinearLayoutCompat>