<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_5"

    tools:context=".AddRoom">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".addroom">

        <TextView
            style="@style/textveiw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_room"
            android:textSize="50sp"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_number"
                    android:textSize="25dp"
                    />

                <EditText
                    android:id="@+id/room_number"
                    style="@style/reg"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/room_number" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Price"
                    android:textSize="30dp"
                    />


                <EditText
                    android:id="@+id/price"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:textSize="25dp"
                    />

            </TableRow>


            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/category"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    android:textSize="20dp"/>

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Capacity"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/capacity"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Capacity"
                    android:textSize="20dp"/>

            </TableRow>
            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="25dp"/>

                <EditText
                    android:id="@+id/status"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/status"
                    android:textSize="20dp"/>

            </TableRow>


        </TableLayout>

        <Button
            style="@style/btn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:onClick="btnadd_room"
            android:textSize="25dp"
            android:text="@string/Add"

            />



    </LinearLayout>
</FrameLayout>



