<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <TextView
        android:textSize="50dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register" />


    <LinearLayout
        android:layout_marginTop="50dp"
        style="@style/textveiw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".CreateAccount"
        android:textSize="50sp">




        <TableLayout
            android:layout_width="400dp"
            android:layout_height="540dp">

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/username"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"

                    />

                <EditText
                    android:id="@+id/firstname"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"

                    />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/lastname"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name" />


            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </TableRow>

            <TableRow>

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/phonenumber"
                    style="@style/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number" />

            </TableRow>

            <Button
                style="@style/btn"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnReg"
                android:text="@string/register"
                android:textSize="30dp"


                />
        </TableLayout>




    </LinearLayout>
</FrameLayout>



